Adds new assets and type

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
   <title>{% if page.title %}{{page.title}}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/png" href="{{ '/images/favicon.png' | relative_url }}">
+  <!-- adobe fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/sfp7hih.css">
   <!-- Google Fonts CDN -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
