--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,6 +61,7 @@ $sub-footer-text-color: $black;
 @import "components/strip";
 @import "components/feature";
 @import "components/social";
+@import "components/forms";
 // @import "components/fonts"; // Uncomment this line to self host font
 
 // Pages
