--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,12 +16,12 @@
   <!-- <link rel="preload" href="{{ '/assets/fonts/playfair-display.woff2' | relative_url }}" as="font" type="font/woff2" crossorigin> -->
   <link href="{{ '/assets/css/style.css' | relative_url }}" rel="stylesheet">
   
-  {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
+  {% if page.description %}<meta name="description" content="{{ page.description }}" />{% else %}<meta name="description" content="Reducing health care disparities for the Latinx community." />{% endif %}
   {% if page.meta_title %}<meta property="og:title" content="{{ page.meta_title }}"/>{% else %}<meta property="og:title" content="{{ page.title }}"/>{% endif %}
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="{{ url }}"/>
-  {% if page.image %}<meta property="og:image" content="{{ page.image | absolute_url }}"/>{% endif %}
-  {% if page.description %}<meta property="og:description" content="{{ page.description }}"/>{% endif %}
+  <meta property="og:url" content="{{ site.url }}"/>
+  {% if page.image %}<meta property="og:image" content="{{ page.image | absolute_url }}"/>{% else %}<meta property="og:image" content="{{ '/images/logo/logo-new.png' }}"/>{% endif %}
+  {% if page.description %}<meta property="og:description" content="{{ page.description }}"/>{% else %}<meta property="og:description" content="Reducing health care disparities for the Latinx community."/>{% endif %}
   <meta name="twitter:card" content="summary"/>
   {% if site.data.seo.meta_twitter_site %}<meta name="twitter:site" content="{{ site.seo.meta_twitter_site }}"/>{% endif %}
   {% if site.data.seo.meta_twitter_creator %}<meta name="twitter:creator" content="{{ site.seo.meta_twitter_creator }}"/>{% endif %}
@@ -37,6 +37,6 @@
   {% include footer.html %}
   <!-- {% include sub-footer.html %} -->
   <script type="text/javascript" src="{{ '/assets/js/scripts.js' | relative_url }}"></script>
-  {% include google-analytics.html %}
+  <!-- {% include google-analytics.html %} -->
 </body>
 </html>
