Adds new home page image, new rumbo section, new rumbo menu item

--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -50,3 +50,15 @@
   padding-top: 30px;
   padding-bottom: 0px;
 }
+
+.small-image {
+ width: 100px;
+}
+
+.rounded {
+    border-radius: 6px;
+}
+
+h2 {
+    font-size: 2rem;
+}
