--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,6 +44,23 @@ bodyClass: "page-home"
   </div>
 </div>
 
+<div class="strip-white">
+  <div class="container pt-6 pb-6 pb-md-10">
+    <div class="row justify-content-start">
+        <div class="col-12 col-md-8 mb-1">
+            <div class="row align-items-center ml-0 mb-2">
+                <image src="images/rumbo/app-icon.png" alt="Rumbo Icon" class="small-image rounded mr-1">
+                <h2>Rumbo</h2>
+            </div>
+            <p>Rumbo is an easily shared bi-lingual mobile application that helps both Spanish-speaking and non-Spanish-speaking Latino individuals with substance use and/or behavioral health challenges find and access culturally appropriate treatment services and related supportive resources.</p>
+        </div>
+        <div class="col-12 col-md-4 mb-1">
+            <img src="images/rumbo/1.png" alt="Rumbo Screenshot" class="intro-image"/>
+        </div>
+    </div>
+  </div>
+</div>
+
 <!-- {% if site.data.features %}
 <div class="strip strip-grey">
   <div class="container pb-6 pb-md-10">
