--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,3 +78,17 @@ body {
     line-height: 1.3;
   }
 }
+
+.masonry {
+  column-count: 2;
+  column-gap: 16px;
+}
+.masonry img {
+  width: 90%;
+  margin-bottom: 16px;
+}
+@media (max-width: 800px) {
+  .masonry {
+    column-count: 1;
+  }
+}
