--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -5,6 +5,7 @@
   padding-top: 60px;
   padding-bottom: 60px;
   overflow: hidden;
+  position: relative;
   @include media-breakpoint-up(md) {
     padding-top: 140px;
     padding-bottom: 140px;
@@ -34,7 +35,7 @@
     font-size: 1.2rem;
     font-weight: light;
     line-height: 1.5;
-    color: $steel;
+    color: black;
     @include media-breakpoint-up(md) {
       width: 80%;
     }
